new proj/src/objects/GE_PRM_KYC_Termination_Checklist__c.object
<CustomObject>
    <description>PRM Object (Used to Capture the KYC and Termination Checklist Process Info)</description>
    <fields>
        <fullName>Bill_To_Additional_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Additional Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC (Bill To Additional Account)</relationshipLabel>
        <relationshipName>KYC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account_Request_Id__c</fullName>
        <formula>GE_HQ_Account__r.GE_HQ_Account_Request_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Request Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KYC</relationshipLabel>
        <relationshipName>KYC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bank_Address__c</fullName>
        <label>Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bank_Contact_Name__c</fullName>
        <label>Name of contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bank_phone__c</fullName>
        <label>Complete Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bankruptcy_filed__c</fullName>
        <label>Bankruptcy Filed in last 5 years</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bill_To_City__c</fullName>
        <label>Bill to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bill_To_Country__c</fullName>
        <label>Bill to Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bill_To_State__c</fullName>
        <label>Bill to State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bill_To_Street__c</fullName>
        <label>Bill to Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Bill_To_Zip__c</fullName>
        <label>Bill to Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CMF_Eram_Risk_Mgmt_Tool_Chkd__c</fullName>
        <inlineHelpText>Has the CMF or Eram Risk Management Tool Been Checked for Existing GE Energy Account?</inlineHelpText>
        <label>CMF/Eram Risk Management Tool Checked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Chkd_for_Existing_Acc__c</fullName>
        <label>Checked for Existing Account</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comp_Leg_En_Nm__c</fullName>
        <label>Company Legal Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comp_Letterhead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach the Letter head in Notes &amp; Attachments section and select this field.</inlineHelpText>
        <label>Company Letterhead Attached ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Comp_Reg_Num__c</fullName>
        <label>Company registration number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cont_Person_for_Clarifications__c</fullName>
        <inlineHelpText>If Questions or Clarification is needed on any of these questions who should be contacted?</inlineHelpText>
        <label>Contact Person for Clarifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Credit_Debit_Card__c</fullName>
        <label>Credit / Debit Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Cust_ID_Num__c</fullName>
        <inlineHelpText>If Existing Account was identified, provide the Customer ID Number here.</inlineHelpText>
        <label>Customer Id Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_D_B__c</fullName>
        <label>D&amp;B# (if available)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Date_Of_Est__c</fullName>
        <label>Date of Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Default_Trans_Curr__c</fullName>
        <label>Default Currency for Transaction</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Email__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Existing_Acc_Identified__c</fullName>
        <label>Was Existing account Identified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Existing_Cust_Screenshot_Atchd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Existing Account was identified, provide the Customer ID Number and attach a screen shot in Notes &amp; Attachement section and select this field.</inlineHelpText>
        <label>Screenshot of Existing Customer Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Fax_Num__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Form_Date__c</fullName>
        <description>Date to be displayed at the bottom of the page(long form)</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Form_Name__c</fullName>
        <description>Name at the bottom of the page (Long form)</description>
        <label>Printed or Typed Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Form_Sales_Mgr_Sign__c</fullName>
        <description>Signature of the Sales Manager at the bottom of the page</description>
        <label>Sales Manager’s Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Form_Title__c</fullName>
        <description>Title to be displayed at the bottom of the page(long form)</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Form_Type__c</fullName>
        <label>Form Type</label>
        <picklist>
            <picklistValues>
                <fullName>Long Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No KYC Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Govt_Owned_Entity__c</fullName>
        <label>Are you a Government owned Entity (Y/N)?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Qn_Atchd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach the completed copy of &quot;Customer Information Questionnaire&quot; in the attachment section and select this field.</inlineHelpText>
        <label>Customer Info Questionnaire Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Questionnaire__c</fullName>
        <formula>HYPERLINK(&apos;/resource/KYC_Questionnaire&apos;, &apos;Customer Information Questionnaire&apos;, &apos;_blank&apos;)</formula>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Reqstr_Comments__c</fullName>
        <label>KYC Requester Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store the KYC team member information when reviewing the KYC form type</description>
        <label>KYC Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Team_SSO_ID__c</fullName>
        <label>KYC Team SSO ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_KYC_Tm_Comments__c</fullName>
        <label>KYC Team Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Last_2_Annual_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach Annual Report/Audited Financial Statements of last 2 years in the Notes &amp; Attachments section and select this field.</inlineHelpText>
        <label>Last 2 Years Annual Reprt Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Legal_Str__c</fullName>
        <label>Legal Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publicly Held Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Held Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Nature_Hist_of_Comp__c</fullName>
        <label>Nature &amp; History of Company&apos;s Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Open_Account__c</fullName>
        <label>Open Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_PO_Comp_Docs_Atchd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Attach Purchase Order and/or Other acceptable Company Documents in the Notes &amp; Attachment section and select this field.</inlineHelpText>
        <label>Purchase Order/Company Document Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Payment_Method__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Open account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit / Debit Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Phone_Num__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Place_Of_Est__c</fullName>
        <label>Place of Establishment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Prev_Curr_Rel__c</fullName>
        <inlineHelpText>Previous or current relationship with General Electric (or any GE affiliate). Please list here, including period when relationship was active.</inlineHelpText>
        <label>Previous/Current Relationship with GE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Ship_To_City__c</fullName>
        <label>Ship to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Ship_To_Country__c</fullName>
        <label>Ship to Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Ship_To_State__c</fullName>
        <label>Ship to State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Ship_To_Street__c</fullName>
        <label>Ship to Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Ship_To_Zip__c</fullName>
        <label>Ship to Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sold_To_City__c</fullName>
        <label>Sold to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sold_To_Country__c</fullName>
        <label>Sold to Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sold_To_State__c</fullName>
        <label>Sold to State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sold_To_Street__c</fullName>
        <label>Sold to Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Sold_To_Zip__c</fullName>
        <label>Sold to Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Source_of_Funds__c</fullName>
        <label>Source of Funds</label>
        <picklist>
            <picklistValues>
                <fullName>Stimulus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Gov’t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Due Diligence In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Due Diligence Sent back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KYC Sent Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tax_Exemption_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please attach Copy of Tax Exemption Certificate(if available) in the Notes &amp; Attachments section and select this field.</inlineHelpText>
        <label>Tax Exemption Certificate Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_VAT_Tax_ID__c</fullName>
        <inlineHelpText>Please pay attention: Format is crital to verification, Including spaces.</inlineHelpText>
        <label>VAT# / Tax ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Vat_Format_atchmnt__c</fullName>
        <formula>HYPERLINK(&apos;/resource/KYC_VATDataFormat&apos;, &apos;VAT Data Format&apos;,&apos;_blank&apos;)</formula>
        <label>&lt;font color=&quot;white&quot;&gt;&lt;/font&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Vat_Reason_Code__c</fullName>
        <description>Old Name (GE_HQ_Tax_Exemption)</description>
        <inlineHelpText>If YES copy of certificate needed, this can also be used as one of the qualifying documents. If this response is left blank default action is to apply taxes to all orders.</inlineHelpText>
        <label>VAT Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Tax Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Refusal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non - VAT country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT ID Provided does not meet Formatting Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Account_Status__c</fullName>
        <formula>TEXT(GE_HQ_Account__r.GE_HQ_Request_Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Avg_CMF_Approval_Cycle__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESPONSE__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((GE_OG_CMF_INBOUND_RESPONSE__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average CMF Approval Cycle Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Avg_Due_Dlg_CoECycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(KYC_Inbound_Response__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((KYC_Inbound_Response__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Due Diligence CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Business_Reputation__c</fullName>
        <inlineHelpText>If the user indicates &quot;YES&quot; the customer should follow the HIGH risk path.</inlineHelpText>
        <label>GE&apos;s Business Reputation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_CMF_INBOUND_RESPONSE__c</fullName>
        <formula>GE_HQ_Account__r.CMF_Inbound_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMF INBOUND RESPONSE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Status__c</fullName>
        <label>Finance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Final_KYC_Sent_Back_TimeStamp__c</fullName>
        <label>Final KYC Sent Back TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Final_KYC_Sub_Timestamp__c</fullName>
        <label>Final KYC Submitted Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_FinanceUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KYCFinanceUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Rereview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Initial_KYC_Sub_Timestamp__c</fullName>
        <label>Initial KYC Submitted Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Age_in_hrs__c</fullName>
        <label>KYC Age (in hrs)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Approve_Reject_Age_In_hrs__c</fullName>
        <formula>GE_OG_KYC_Sent_Back_Time__c + GE_OG_KYC_SubmittedTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KYC  Approve/ Reject Age (In hrs)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_New_Value__c</fullName>
        <label>KYC New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Old_value__c</fullName>
        <label>KYC Old value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_SentBack_Interim_Time__c</fullName>
        <label>KYC SentBack Interim Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_SentBckCount__c</fullName>
        <label>KYC Sent Back Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Sent_Back_TimStamp__c</fullName>
        <label>Initial KYC Sent Back Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Sent_Back_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KYC Sent Back Time</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Sub_Counter__c</fullName>
        <label>KYC Submitted Counter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_SubmittedTime__c</fullName>
        <defaultValue>0</defaultValue>
        <label>KYC SubmittedTime</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Submitted_Interim_Time__c</fullName>
        <label>KYC Submitted Interim Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Max_CMF_Approval_Cycle__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESPONSE__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((GE_OG_CMF_INBOUND_RESPONSE__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max CMF Approval Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Max_Due_Dlg_CoE_Cycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(KYC_Inbound_Response__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((KYC_Inbound_Response__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Due Diligence CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Min_CMF_Approval_Cycle__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESPONSE__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((GE_OG_CMF_INBOUND_RESPONSE__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min CMF Approval Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Min_Due_Dlg_CoECycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(KYC_Inbound_Response__c)),NOT(ISNULL(KYC_Outbound_Response__c))),((KYC_Inbound_Response__c - KYC_Outbound_Response__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Due Diligence CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_NewFin_Status__c</fullName>
        <formula>Text(GE_HQ_Account__r.GE_OG_AccFin_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Strategic_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Account</label>
        <referenceTo>GE_OG_Strategic_Accounts__c</referenceTo>
        <relationshipLabel>KYC</relationshipLabel>
        <relationshipName>KYC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Transact_Value__c</fullName>
        <label>Transaction Value</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_White_List__c</fullName>
        <inlineHelpText>If the user indicated &quot;YES&quot; and selects a strategic account, the customer should follow the low risk path</inlineHelpText>
        <label>GE White List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Id__c</fullName>
        <formula>GE_PRM_Recommendation__r.GE_PRM_Appointment_Number__r.GE_PRM_Account_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Additional_Notes__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_App_for_Afa_Completed_Comments__c</fullName>
        <inlineHelpText>Application for Appointment Completed Comments</inlineHelpText>
        <label>App for Afa Completed Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Application_Completed__c</fullName>
        <description>Application for Appointment Completed</description>
        <inlineHelpText>Application for Appointment Completed</inlineHelpText>
        <label>Application for Appointment Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Completed_App_by_Channel__c</fullName>
        <description>Completed App by Channel</description>
        <inlineHelpText>Completed App by Channel</inlineHelpText>
        <label>Completed App by Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_D_B_Comments__c</fullName>
        <inlineHelpText>D&amp;B Comments</inlineHelpText>
        <label>D&amp;B Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_D_B__c</fullName>
        <description>D&amp;B</description>
        <inlineHelpText>D&amp;B</inlineHelpText>
        <label>D&amp;B</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Documented_Site_Visit_Interview__c</fullName>
        <description>Documented Site Visit or Interview</description>
        <inlineHelpText>Documented Site Visit or Interview</inlineHelpText>
        <label>Documented Site Visit or Interview</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Eligib_to_do_Business_Comments__c</fullName>
        <inlineHelpText>Eligibility to do Business Comments</inlineHelpText>
        <label>Eligibility to do Business Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Eligibility_to_do_Business__c</fullName>
        <description>Eligibility to do Business, Registered with Government</description>
        <inlineHelpText>Eligibility to do Business, Registered with Government</inlineHelpText>
        <label>Eligibility to do Business</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Financial_Risk_Analysis_Comments__c</fullName>
        <inlineHelpText>Financial Risk Analysis Comments</inlineHelpText>
        <label>Financial Risk Analysis Comments</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Financial_Risk_Analysis__c</fullName>
        <description>Financial Risk Analysis</description>
        <inlineHelpText>Financial Risk Analysis</inlineHelpText>
        <label>Financial Risk Analysis</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>